[project]
name = "aoc2025"
version = "0.1.0"
description = "Advent of Code 2025 solutions with Pyxel visualizations"
requires-python = ">=3.11"
dependencies = [
    "pyxel>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
